temp/objects/System_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>System Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Key__c</columns>
        <columns>Value__c</columns>
        <columns>Categories__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Once_created_Category_cannot_be_changed</fullName>
        <active>true</active>
        <description>Once create record, Key cannot be changed.</description>
        <errorConditionFormula>ISCHANGED( Categories__c )</errorConditionFormula>
        <errorDisplayField>Categories__c</errorDisplayField>
        <errorMessage>Category cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Once_created_Key_cannot_be_changed</fullName>
        <active>false</active>
        <description>Once create record, Key cannot be changed.</description>
        <errorConditionFormula>ISCHANGED( Key__c )</errorConditionFormula>
        <errorDisplayField>Key__c</errorDisplayField>
        <errorMessage>Key cannot be changed</errorMessage>
    </validationRules>
</CustomObject>